--- a/ffmpeg-sharp/ChangeLog
+++ b/ffmpeg-sharp/ChangeLog
@@ -1,3 +1,12 @@
+2008-03-28  Tim Jones <tim@roastedamoeba.com>
+	* Added VideoDecoderStream, and refactored common code from audio and video
+	decoding into the DecoderStream base class
+	* Added interop classes for the sws_* family of functions in FFmpeg.
+	However, I couldn't make these functions work in VideoDecoderStream
+	so they have been commented out
+	* Tweaked some of the interop method signatures to get them working
+	for video decoding
+
 2008-03-27  Justin Cherniak <justin.cherniak@gmail.com>
 	* Fixed layout of AVFrame
 	* Refactored IntPtr's with pointers in a few other structs
