2008-04-05  Justin Cherniak <justin.cherniak@gmail.com> 	* Erroneous commit, fixed in rev 17

--- a/ffmpeg-sharp/ChangeLog
+++ b/ffmpeg-sharp/ChangeLog
@@ -1,4 +1,5 @@
-2008-03-29  Justin Cherniak <justin.cherniak@gmail.com>
+2008-04-04  Justin Cherniak <justin.cherniak@gmail.com>
+	* examples/VideoPlayer: New example using a Windows Forms control
 	* DecoderStream.cs: 
 		- Refactored Height and Width to VideoDecoderStream
 		- Refactoring and comment updates
