Removed SOME dead functions, moved others. Still a lot left that either doesn't work or is at the wrong place, or doesn't comply with LIBAVCODEC 54.

--- a/ffmpeg-sharp/ChangeLog
+++ b/ffmpeg-sharp/ChangeLog
@@ -1,3 +1,6 @@
+2012-09-05  Martin Cyr <mcyr@innvue.com>
+	* Update for support of LIBAVCODEC 54
+
 2012-01-05  Justin Cherniak <justin.cherniak@gmail.com>
     * Major rewrite to support reading multiple streams (such as audio and 
 	video) per file
